# obcpp

./: .clang-format  .gitignore  .gitmodules  .swp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Dockerfile  Makefile  README.md  libcore_library.dylib  main.cpp  shell.nix  shell.nix.bak
.devcontainer/: Dockerfile  devcontainer.json
bruh (test)/: L_+_ratio.cpp  L_+_ratio.hpp
configs/: config.json  default-config.json  dev-config.json  dev.json  jetson.json
docker/: Dockerfile.arm  Dockerfile.jetson  Dockerfile.nvidia  Dockerfile.sitl  Dockerfile.x86  Makefile  jetson-pixhawk-compose.yml  jetson-sitl-compose.yml  sitl-compose.yml  versions.env
include/: CMakeLists.txt  stdafx.h
include/airdrop/: controls.hpp  packet.h  packets.hpp
include/camera/: interface.hpp  lucid.cpp  lucid.hpp  mock.hpp  picamera.hpp  rpi.hpp  rpi.hpp~
include/core/: config.hpp  evasion_state.hpp  mission_config.hpp  mission_parameters.hpp  mission_state.hpp  obc.hpp  states.hpp  ticks.hpp
include/cv/: aggregator.hpp  classification.hpp  clustering.hpp  dynamic_detection.hpp  hdr.hpp  localization.hpp  mapping.hpp  matching.hpp  owlv2.hpp  pipeline.hpp  preprocess.hpp  saliency.hpp  sam3.hpp  segmentation.hpp  utilities.hpp  yolo.hpp
include/network/: airdrop.hpp  airdrop_client.hpp  airdrop_packets.h  airdrop_sockets.h  async_client.hpp  camera_client.hpp  camera_data.hpp  camera_server.hpp  client.hpp  gcs.hpp  gcs_macros.hpp  gcs_routes.hpp  mavlink.hpp  mock_server.hpp  rpi_connection.hpp  serialize.hpp  server.hpp  sync_client.hpp  sync_server.hpp  tcp_client.hpp  tcp_server.hpp  udp_client.hpp  udp_server.hpp
include/network/mock/: packet_queue.h
include/pathing/: airdrop.hpp  cartesian.hpp  dubins.hpp  dynamic.hpp  environment.hpp  mission_path.hpp  plotting.hpp  static.hpp  tree.hpp
include/ticks/: active_takeoff.hpp  airdrop_approach.hpp  airdrop_prep.hpp  auto_landing.hpp  cv_loiter.hpp  fly_search.hpp  fly_waypoints.hpp  ids.hpp  manual_landing.hpp  mav_upload.hpp  message.hpp  mission_done.hpp  mission_prep.hpp  mission_start.hpp  mission_upload.hpp  path_gen.hpp  path_validate.hpp  refueling.hpp  takeoff.hpp  takeoff_prep.hpp  tick.hpp  wait_for_takeoff.hpp
include/utilities/: OBCConfig.hpp  base64.hpp  common.hpp  constants.hpp  datatypes.hpp  http.hpp  jsonable.hpp  lockptr.hpp  locks.hpp  logging.hpp  macros.hpp  mavlink.hpp  obc_config.hpp  obc_config_macros.hpp  rng.hpp  serialize.hpp  tcp.hpp
scripts/: install-protos.sh  install-valgrind.sh  lucid-setup.sh
src/: CMakeLists.txt  dummy.c  main.cpp
src/camera/: CMakeLists.txt  ImageData.cpp  event_loop.cpp  interface.cpp  lucid.cpp  mock.cpp  picamera.cpp  rpi.cpp  rpi.cpp~
src/classification/: pipeline.hpp
src/connection/: airdrop.hpp  camera.hpp  mavlink.hpp
src/core/: CMakeLists.txt  config.cpp  datatypes.hpp  evasion_state.cpp  mission_config.cpp  mission_parameters.cpp  mission_state.cpp  obc.cpp  states.cpp  states.hpp  ticks.cpp
src/cv/: CMakeLists.txt  aggregator.cpp  classification.cpp  clustering.cpp  dynamic_detection.cpp  hdr.cpp  localization.cpp  mapping.cpp  matching.cpp  owlv2.cpp  pipeline.cpp  preprocess.cpp  saliency.cpp  sam3.cpp  segmentation.cpp  utilities.cpp  yolo.cpp
src/network/: CMakeLists.txt  airdrop_client.cpp  airdrop_sockets.c  async_client.cpp  camera_client.cpp  camera_server.cpp  camera_socket.cpp  client.cpp  gcs.cpp  gcs_routes.cpp  mavlink.cpp  mock_server.cpp  sync_client.cpp  sync_server.cpp  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
src/network/mock/: airdrop_sockets.c  packet_queue.c
src/pathing/: CMakeLists.txt  cartesian.cpp  dubins.cpp  dynamic.hpp  environment.cpp  mission_path.cpp  plotting.cpp  static.cpp  static.hpp  tree.cpp
src/server/: server.hpp
src/ticks/: CMakeLists.txt  active_takeoff.cpp  airdrop_approach.cpp  airdrop_prep.cpp  auto_landing.cpp  cv_loiter.cpp  fly_search.cpp  fly_waypoints.cpp  manual_landing.cpp  mav_upload.cpp  mission_done.cpp  mission_prep.cpp  mission_start.cpp  mission_upload.cpp  path_gen.cpp  path_validate.cpp  refueling.cpp  takeoff.cpp  takeoff_prep.cpp  tick.cpp  wait_for_takeoff.cpp
src/utilities/: CMakeLists.txt  OBCConfig.cpp  base64.cpp  cartesian.hpp  common.cpp  constants.hpp  datatypes.cpp  logging.cpp  mavlink.cpp  obc_config.cpp  rng.cpp  tcp.cpp
tests/: CMakeLists.txt  cartesian_test.cpp  dubins_test.cpp  hello_test2.cpp  tree_test.cpp
tests/cv/: hdr_test.cpp
tests/integration/: CMakeLists.txt  airdrop_approach.cpp  airdrop_packets.cpp  airdrop_pathing.cpp  airdrop_pathing_2.cpp  airdrop_sockets.c  camera_integration_test.cpp  camera_lucid.cpp  camera_mock.cpp  camera_playground.cpp  clustering.cpp  coverage_pathing.cpp  coverage_pathing_2.cpp  cuda_check.cpp  cv_aggregator.cpp  cv_classification.cpp  cv_mapping.cpp  cv_matching.cpp  cv_owlv2.cpp  cv_pipeline.cpp  cv_preprocess.cpp  cv_saliency.cpp  cv_segmentation.cpp  cv_yolo.cpp  deviation_ranking.cpp  drop_it_like_its_hot.cpp  load_torchvision_model.cpp  lucid.cpp  mavlink_client.cpp  mavsdk.cpp  path_planning.cpp  path_plotting.cpp  pathing_integration.cpp  picamera.cpp  playground.cpp  saliency.cpp  static.cpp  sync_client_mock.cpp  sync_server_mock.cpp  tcp_client_mock.cpp  (+3 more)
tests/integration/util/: config.json  mission_data_2020.json  mission_data_2024.json
tests/unit/: CMakeLists.txt  cartesian_test.cpp  config_test.cpp  datatypes_test.cpp  dubins_test.cpp  environment_test.cpp  gcs_server_test.cpp  hdr_test.cpp  hello_test.cpp  hello_test2.cpp  jsonable_test.cpp  mission_config.cpp  modify_runs.cpp  pathing_test.cpp  test_main.cpp  tree_test.cpp
tests/unit/airdrop_client/: airdrop_client_test.cpp  mock_airdrop_sockets.c  mock_airdrop_sockets_test.cpp  packet_queue.c  packet_queue.h  packet_queue_test.cpp
tests/unit/camera/: mock.cpp
tests/unit/cv/: hdr_test.cpp  localization.cpp  utilities_test.cpp
tests/unit/pathing/: centroid_test.cpp  dubins_test.cpp  tree_test.cpp
tests/unit/resources/: json_snippets.hpp
tests/unit/udp2_squared/: parse_id_test.cpp
tests/util/: handler_params.hpp
(+17 files in other folders)
